[package]
edition = "2021"
name = "profile"
version = "0.1.0"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.7"
console_error_panic_hook = "0.1.7"
html-escape = "0.2.13"
regex = "1.10.3"
serde = "1.0.196"
serde-enum-str = "0.4.0"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.113"
thiserror = "1.0.56"
totp-rs = { version = "5.5.1", features = ["serde_support"] }
url = "2.5.0"
wasm-timer = "0.2.5"
worker = "0.0.18"
[profile.dev]
debug = true
opt-level = 0

[profile.release]
# debug = true
lto = true
strip = true
codegen-units = 1
